--- a/Counter-Strike: Source/autoexecfun.cfg
+++ b/Counter-Strike: Source/autoexecfun.cfg
@@ -3,6 +3,8 @@ echo "cl_interp 0.015152 for 66tic servers"
 echo "r_queued_decals 1 causes crashes"
 echo "cl_allowdownload 0 causes black screen on join for some servers"
 echo "r_waterdraw cvars cause black water and water glitches when disabled" 
+echo "r_maxmodeldecal 0 will crash game after joining a server"
+echo "cs1.6 servers show up in css server list"
 
 echo "ragdolls and water are enabled for fun config"
 
@@ -116,6 +118,7 @@ mod_load_vcollide_async "1"
 mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_touchalldata "1"
+mp_decals "300"
 name "TyranT🜨"
 net_maxpacketdrop "0"
 net_compresspackets_minsize "1260"
@@ -124,7 +127,7 @@ net_maxroutable "1260"
 
 r_cheapwaterend "0.1"
 r_cheapwaterstart "0.1"
-r_decals "128"
+r_decals "300"
 r_drawflecks "0"
 r_drawtracers_firstperson "0"
 r_decalstaticprops "0"
@@ -145,7 +148,7 @@ r_flashlightscissor "0"
 r_flex "0"
 r_lightcache_zbuffercache "1"
 r_lod "2"
-r_maxmodeldecal "4"
+r_maxmodeldecal "1"
 r_maxnewsamples "0"
 r_maxsampledist "0"
 r_minsampledist "0"
