--- a/Counter-Strike: Source/autoexechq.cfg
+++ b/Counter-Strike: Source/autoexechq.cfg
@@ -3,7 +3,8 @@ echo "cl_interp 0.015152 for 66tic servers"
 echo "r_queued_decals 1 causes crashes"
 echo "cl_allowdownload 0 causes black screen on join for some servers"
 echo "r_waterdraw cvars cause black water and water glitches when disabled"
-
+echo "r_maxmodeldecal 0 will crash game after joining a server"
+echo "cs1.6 servers show up in css server list"
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -114,6 +115,7 @@ mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_touchalldata "1"
 mod_offline_hdr_switch "1"
+mp_decals "300"
 name "TyranT🜨"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
@@ -122,7 +124,7 @@ net_maxpacketdrop "0"
 
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
-r_decals "128"
+r_decals "300"
 r_decalstaticprops "1"
 r_drawdetailprops "1"
 r_drawflecks "1"
