--- a/Counter-Strike: Source/autoexecfun.cfg
+++ b/Counter-Strike: Source/autoexecfun.cfg
@@ -148,6 +148,7 @@ r_flashlightscissor "0"
 r_flex "0"
 r_lightcache_zbuffercache "1"
 r_lod "2"
+r_maxdlights "32"
 r_maxmodeldecal "1"
 r_maxnewsamples "0"
 r_maxsampledist "0"
