--- a/Counter-Strike: Source/autoexechq.cfg
+++ b/Counter-Strike: Source/autoexechq.cfg
@@ -145,6 +145,7 @@ r_flashlightculldepth "1"
 r_flashlightscissor "1"
 r_flex "1"
 r_lod "0"
+r_maxdlights "128"
 r_maxmodeldecal "50"
 r_maxnewsamples "9"
 r_maxsampledist "999999999999999999999999999"
