--- a/Counter-Strike: Source/autoexecperf.cfg
+++ b/Counter-Strike: Source/autoexecperf.cfg
@@ -147,6 +147,7 @@ r_flashlightscissor "0"
 r_flex "0"
 r_lightcache_zbuffercache "1"
 r_lod "2"
+r_maxdlights "0"
 r_maxmodeldecal "1"
 r_maxnewsamples "0"
 r_maxsampledist "0"
