--- a/Counter-Strike: Source/autoexecfun.cfg
+++ b/Counter-Strike: Source/autoexecfun.cfg
@@ -5,7 +5,7 @@ echo "cl_allowdownload 0 causes black screen on join for some servers"
 echo "r_waterdraw cvars cause black water and water glitches when disabled" 
 echo "r_maxmodeldecal 0 will crash game after joining a server"
 echo "cs1.6 servers show up in css server list"
-echo "dont use violence_agibs / violence_hgibs, breaks ragdolls and disappearing corpses"
+echo "dont use violence_agibs 0 / violence_hgibs 0, breaks ragdolls and disappearing corpses"
 
 echo "ragdolls and water are enabled for fun config"
 
@@ -193,9 +193,9 @@ snd_noextraupdate "1"
 snd_async_spew_blocking "0"
 
 violence_ablood "1"
-violence_agibs "0"
+violence_agibs "1"
 violence_hblood "1"
-violence_hgibs "0"
+violence_hgibs "1"
 
 sv_allowdownload "0"
 sv_allowupload "0"
