--- a/Counter-Strike: Source/autoexecpro.cfg
+++ b/Counter-Strike: Source/autoexecpro.cfg
@@ -5,7 +5,7 @@ echo "cl_allowdownload 0 causes black screen on join for some servers"
 echo "r_waterdraw cvars cause black water and water glitches when disabled"
 echo "r_maxmodeldecal 0 will crash game after joining a server"
 echo "cs1.6 servers show up in css server list"
-echo "dont use violence_agibs 0 / violence_hgibs 0, breaks ragdolls and disappearing corpses"
+echo "dont use violence_* 0 for gibs or blood, breaks ragdolls and disappearing corpses"
 
 echo "water and shadows enabled for pro config"
 
