--- a/Counter-Strike: Source/autoexecfun.cfg
+++ b/Counter-Strike: Source/autoexecfun.cfg
@@ -23,7 +23,7 @@ cl_customsounds "0"
 cl_detaildist "1"
 cl_detailfade "1"
 cl_disablehtmlmotd "1"
-cl_downloadfilter "none"
+cl_downloadfilter "mapsonly"
 cl_ejectbrass "0"
 cl_forcepreload "1"
 cl_interp "0.01"
