--- a/Counter-Strike: Source/autoexechq.cfg
+++ b/Counter-Strike: Source/autoexechq.cfg
@@ -20,7 +20,7 @@ cl_customsounds "0"
 cl_detaildist "999999999999999999999999999"
 cl_detailfade "999999999999999999999999999"
 cl_disablehtmlmotd "1"
-cl_downloadfilter "none"
+cl_downloadfilter "mapsonly"
 cl_ejectbrass "1"
 cl_forcepreload "1"
 cl_interp "0.01"
