--- a/Team Fortress 2/autoexecperf.cfg
+++ b/Team Fortress 2/autoexecperf.cfg
@@ -116,6 +116,7 @@ mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_offline_hdr_switch "1"
 mod_touchalldata "1"
+mp_decals "0"
 name "TyranT🜨"
 net_maxpacketdrop "0"
 net_compresspackets_minsize "1260"
@@ -123,11 +124,12 @@ net_maxfragments "1260"
 net_maxroutable "1260"
 r_cheapwaterend "0.1"
 r_cheapwaterstart "0.1"
-r_decals "300"
+r_decals "0"
 r_decalstaticprops "0"
 r_drawdetailprops "0"
 r_drawflecks "0"
 r_drawtracers_firstperson "0"
+r_dynamic "0"
 r_eyes "0"
 r_eyegloss "0"
 r_eyemove "0"
@@ -143,8 +145,8 @@ r_flashlightculldepth "0"
 r_flashlightscissor "0"
 r_flex "0"
 r_lod "2"
-r_maxdlights "32"
-r_maxmodeldecal "25"
+r_maxdlights "0"
+r_maxmodeldecal "0"
 r_maxnewsamples "1"
 r_maxsampledist "1"
 r_minnewsamples "1"
