--- a/Team Fortress 2/autoexechq.cfg
+++ b/Team Fortress 2/autoexechq.cfg
@@ -117,6 +117,7 @@ mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_touchalldata "1"
 mod_offline_hdr_switch "1"
+mp_decals "300"
 name "TyranT🜨"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
@@ -129,6 +130,7 @@ r_decalstaticprops "1"
 r_drawdetailprops "1"
 r_drawflecks "1"
 r_drawtracers_firstperson "0"
+r_dynamic "1"
 r_eyes "1"
 r_eyegloss "1"
 r_eyemove "1"
