--- a/Team Fortress 2/autoexecpro.cfg
+++ b/Team Fortress 2/autoexecpro.cfg
@@ -116,6 +116,7 @@ mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_offline_hdr_switch "1"
 mod_touchalldata "1"
+mp_decals "300"
 name "TyranT🜨"
 net_maxpacketdrop "0"
 net_compresspackets_minsize "1260"
@@ -128,6 +129,7 @@ r_decalstaticprops "0"
 r_drawdetailprops "0"
 r_drawflecks "0"
 r_drawtracers_firstperson "0"
+r_dynamic "1"
 r_eyes "0"
 r_eyegloss "0"
 r_eyemove "0"
