--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -24,6 +24,9 @@ cl_updaterate "101"
 cl_vsmoothing "0.00"
 cl_waterdist "4"
 crosshair "1"
+d_mipcap "3"
+d_spriteskip "1"
+d_mipscale "3"
 default_fov "90"
 ex_interp "0.01"
 fps_max "99.5"
@@ -33,11 +36,14 @@ gl_ansio "0"
 gl_dither "1"
 gl_fog "0"
 gl_keeptjunctions "0"
+gl_lightholes "1"
 gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
 gl_lowlatency_maxslop_ms "1"
 gl_lowlatency_minslop_ms "1"
 gl_max_size "256"
+gl_picmip "3"
+gl_playermip "3"
 gl_polyoffset "0.1"
 gl_reduce_shader_changes "1"
 gl_round_down "5"
@@ -50,19 +56,26 @@ hpk_maxsize "0.000000001"
 hud_centerid "1"
 hud_fastswitch "1"
 joystick "0"
+joysupported "0"
 m_customaccel "0"
 m_filter "0"
 m_mousethread_sleep "1"
 m_rawinput "1"
+max_shells "0"
+max_smokepuffs "0"
 mp_decals "0"
 name "TyranT🜨"
 r_decals "0"
 r_detailtextures "0"
 r_detailtexturessupported "0"
+r_dynamic "1"
+r_glowshellfreq "0"
+r_lightmap "0"
 r_mirroralpha "0"
 r_mmx "1"
 r_novis "0"
 r_prefertexturefiltering "1"
+r_shadows "0"
 r_traceglow "0"
 r_wateralpha "1"
 rate "100000"
@@ -82,6 +95,10 @@ sv_send_logos "0"
 sv_send_resources "0"
 sys_ticrate "10000"
 tfc_newmodels "0"
+violence_ablood "0"
+violence_agibs "0"
+violence_hblood "0"
+violence_hgibs "0"
 +mlook
 
 bind mwheelup "+duck"
