--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -24,6 +24,9 @@ cl_updaterate "101"
 cl_vsmoothing "0.00"
 cl_waterdist "4"
 crosshair "1"
+d_mipcap "0"
+d_spriteskip "0"
+d_mipscale "0"
 default_fov "90"
 ex_interp "0.01"
 fps_max "99.5"
@@ -33,11 +36,14 @@ gl_ansio "16"
 gl_dither "0"
 gl_fog "1"
 gl_keeptjunctions "1"
+gl_lightholes "1"
 gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
 gl_lowlatency_maxslop_ms "1"
 gl_lowlatency_minslop_ms "1"
 gl_max_size "8192"
+gl_picmip "0"
+gl_playermip "0"
 gl_polyoffset "0.1"
 gl_reduce_shader_changes "0"
 gl_round_down "0"
@@ -51,19 +57,26 @@ hpk_maxsize "256"
 hud_centerid "1"
 hud_fastswitch "1"
 joystick "0"
+joysupported "0"
 m_customaccel "0"
 m_filter "0"
 m_mousethread_sleep "1"
 m_rawinput "1"
+max_shells "999999999"
+max_smokepuffs "999999999"
 mp_decals "300"
 name "TyranT🜨"
 r_decals "300"
 r_detailtextures "1
 r_detailtexturessupported "1"
+r_dynamic "1"
+r_glowshellfreq "2.2"
+r_lightmap "0"
 r_mirroralpha "1"
 r_mmx "1"
 r_novis "1"
 r_prefertexturefiltering "1"
+r_shadows "1"
 r_traceglow "1"
 r_wateralpha "0.5"
 rate "100000"
@@ -83,6 +96,10 @@ sv_send_logos "1"
 sv_send_resources "1"
 sys_ticrate "10000"
 tfc_newmodels "0"
+violence_ablood "1"
+violence_agibs "1"
+violence_hblood "1"
+violence_hgibs "1"
 +mlook
 
 bind mwheelup "+duck"
