--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -22,6 +22,9 @@ cl_updaterate "101"
 cl_vsmoothing "0.000"
 cl_weather "1"
 clientport "65510"
+d_mipcap "0"
+d_spriteskip "0"
+d_mipscale "0"
 default_fov "105"
 ex_interp "0.01"
 fps_max "99.5"
@@ -33,6 +36,7 @@ gl_ansio "16"
 gl_dither "0"
 gl_fog "1"
 gl_keeptjunctions "1"
+gl_lightholes "1"
 gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
 gl_lowlatency_maxslop_ms "1"
@@ -55,18 +59,25 @@ hpk_maxsize "0.0000000001"
 hud_centerid "1"
 hud_fastswitch "1"
 joystick "0"
+joysupported "0"
 m_filter "0"
 m_mousethread_sleep "1"
 m_rawinput "1"
+max_shells "999999999"
+max_smokepuffs "999999999"
 mp_decals "300"
 name "TyranT🜨"
 r_decals "300"
 r_detailtextures "1"
 r_detailtexturessupported "1"
+r_dynamic "1"
+r_glowshellfreq "2.2"
+r_lightmap "0"
 r_mirroralpha "1"
 r_mmx "1"
 r_novis "1"
 r_prefertexturefiltering "1"
+r_shadows "1"
 r_traceglow "1"
 r_wateralpha "0.5"
 rate "100000"
@@ -89,6 +100,10 @@ sv_send_logos "0"
 sv_send_resources "0"
 sys_ticrate "10000"
 tfc_newmodels "0"
+violence_ablood "1"
+violence_agibs "1"
+violence_hblood "1"
+violence_hgibs "1"
 
 bind shift "+gren1"
 bind alt "+gren2"
