--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -20,6 +20,9 @@ cl_nosmooth "1"
 cl_smoothtime "0.000"
 cl_updaterate "101"
 cl_vsmoothing "0.000"
+d_mipcap "3"
+d_spriteskip "1"
+d_mipscale "3"
 default_fov "105"
 ex_interp "0.01"
 fps_max "99.5"
@@ -31,6 +34,7 @@ gl_ansio "0"
 gl_dither "1"
 gl_fog "0"
 gl_keeptjunctions "0"
+gl_lightholes "1"
 gl_lowlatency "1"
 gl_lowlatency_debugoutput "0"
 gl_lowlatency_maxslop_ms "1"
@@ -50,18 +54,25 @@ hpk_maxsize "0.0000000001"
 hud_centerid "1"
 hud_fastswitch "1"
 joystick "0"
+joysupported "0"
 m_filter "0"
 m_mousethread_sleep "1"
 m_rawinput "1"
+max_shells "0"
+max_smokepuffs "0"
 mp_decals "0"
 name "TyranT🜨"
 r_decals "0"
 r_detailtextures "0"
 r_detailtexturessupported "0"
+r_dynamic "1"
+r_glowshellfreq "0"
+r_lightmap "0"
 r_mirroralpha "0"
 r_mmx "1"
 r_novis "0"
 r_prefertexturefiltering "1"
+r_shadows "0"
 r_traceglow "0"
 r_wateralpha "1"
 rate "100000"
@@ -84,6 +95,10 @@ sv_send_logos "0"
 sv_send_resources "0"
 sys_ticrate "10000"
 tfc_newmodels "0"
+violence_ablood "0"
+violence_agibs "0"
+violence_hblood "0"
+violence_hgibs "0"
 
 bind shift "+gren1"
 bind alt "+gren2"
