--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -29,10 +29,12 @@ d_spriteskip "0"
 d_mipscale "0"
 default_fov "90"
 ex_interp "0.01"
+fastsprites "0"
 fps_max "99.5"
 fps_override "0"
 gamma "2.5"
 gl_ansio "16"
+gl_cull "0"
 gl_dither "0"
 gl_fog "1"
 gl_keeptjunctions "1"
