--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -29,10 +29,12 @@ d_spriteskip "1"
 d_mipscale "3"
 default_fov "90"
 ex_interp "0.01"
+fastsprites "2"
 fps_max "99.5"
 fps_override "0"
 gamma "3"
 gl_ansio "0"
+gl_cull "1"
 gl_dither "1"
 gl_fog "0"
 gl_keeptjunctions "0"
