--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -27,12 +27,14 @@ d_spriteskip "0"
 d_mipscale "0"
 default_fov "105"
 ex_interp "0.01"
+fastsprites "0"
 fps_max "99.5"
 fps_override "0"
 fs_lazy_precache "0"
 gamma "3"
 gl_affinemodels "0"
 gl_ansio "16"
+gl_cull "0"
 gl_dither "0"
 gl_fog "1"
 gl_keeptjunctions "1"
