--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -25,12 +25,14 @@ d_spriteskip "1"
 d_mipscale "3"
 default_fov "105"
 ex_interp "0.01"
+fastsprites "2"
 fps_max "99.5"
 fps_override "0"
 fs_lazy_precache "0"
 gamma "3"
 gl_affinemodels "0"
 gl_ansio "0"
+gl_cull "1"
 gl_dither "1"
 gl_fog "0"
 gl_keeptjunctions "0"
