--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -36,6 +36,7 @@ gl_affinemodels "0"
 gl_ansio "16"
 gl_cull "0"
 gl_dither "0"
+gl_flipmatrix "0"
 gl_fog "1"
 gl_keeptjunctions "1"
 gl_lightholes "1"
