--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -34,6 +34,7 @@ gl_affinemodels "0"
 gl_ansio "0"
 gl_cull "1"
 gl_dither "1"
+gl_flipmatrix "0"
 gl_fog "0"
 gl_keeptjunctions "0"
 gl_lightholes "1"
