--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -55,6 +55,7 @@ gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
 gl_use_shaders "1"
 gl_vsync "0"
 gl_widescreen_yfov "1"
+gl_zmax "16384"
 hisound "1"
 hpk_maxsize "256"
 hud_centerid "1"
