--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -54,6 +54,7 @@ gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 gl_use_shaders "0"
 gl_vsync "0"
 gl_widescreen_yfov "0"
+gl_zmax "4096"
 hisound "1"
 hpk_maxsize "0.000000001"
 hud_centerid "1"
