--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -53,6 +53,7 @@ gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 gl_use_shaders "0"
 gl_vsync "0"
 gl_widescreen_yfov "0"
+gl_zmax "4096"
 hpk_maxsize "0.0000000001"
 hud_centerid "1"
 hud_fastswitch "1"
