--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -56,6 +56,7 @@ gl_use_shaders "1"
 gl_vsync "0"
 gl_widescreen_yfov "1"
 gl_zmax "16384"
+gl_ztrick_old "0"
 hisound "1"
 hpk_maxsize "256"
 hud_centerid "1"
