--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -55,6 +55,7 @@ gl_use_shaders "0"
 gl_vsync "0"
 gl_widescreen_yfov "0"
 gl_zmax "4096"
+gl_ztrick_old "0"
 hisound "1"
 hpk_maxsize "0.000000001"
 hud_centerid "1"
