--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -54,6 +54,7 @@ gl_use_shaders "0"
 gl_vsync "0"
 gl_widescreen_yfov "0"
 gl_zmax "4096"
+gl_ztrick_old "0"
 hpk_maxsize "0.0000000001"
 hud_centerid "1"
 hud_fastswitch "1"
