--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -69,6 +69,7 @@ m_rawinput "1"
 max_shells "999999999"
 max_smokepuffs "999999999"
 mp_decals "300"
+mp_logfile "0"
 name "TyranT🜨"
 r_decals "300"
 r_detailtextures "1"
