--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -1,6 +1,7 @@
 echo "crippling depression quality"
 echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
+echo "gl_zmax 0-8192, 0 is used as wallhack if D3D render is used"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
@@ -71,7 +72,7 @@ gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
 gl_use_shaders "1"
 gl_vsync "0"
 gl_widescreen_yfov "1"
-gl_zmax "4096"
+gl_zmax "8192"
 gl_ztrick_old "0"
 gunsmoke "1"
 hisound "1"
