--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -1,6 +1,7 @@
 echo "crippling depression performance"
 echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
+echo "gl_zmax 0-8192, 0 is used as wallhack when D3D render is enabled"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
@@ -71,7 +72,7 @@ gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 gl_use_shaders "0"
 gl_vsync "0"
 gl_widescreen_yfov "0"
-gl_zmax "4096"
+gl_zmax "1"
 gl_ztrick_old "0"
 gunsmoke "0"
 hisound "1"
