--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -2,6 +2,7 @@ echo "crippling depression quality"
 echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
 echo "cl_waterdist will break underwater rendering and movement underwater"
+echo "gl_zmax 0-8192, 0 is used as wallhack when D3D render is enabled"
 
 _snd_mixahead "0.04"
 ati_npatch "0"
@@ -55,7 +56,7 @@ gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
 gl_use_shaders "1"
 gl_vsync "0"
 gl_widescreen_yfov "1"
-gl_zmax "16384"
+gl_zmax "8192"
 gl_ztrick_old "0"
 hisound "1"
 hpk_maxsize "256"
