--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -2,7 +2,7 @@ echo "crippling depression quality"
 echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
 echo "cl_waterdist will break underwater rendering and movement underwater"
-echo "gl_zmax 0-8192, 0 is used as wallhack when D3D render is enabled"
+echo "gl_zmax 0-8192 (default 4096), 0 is used as wallhack when D3D render is enabled"
 
 _snd_mixahead "0.04"
 ati_npatch "0"
