--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -1,7 +1,7 @@
 echo "crippling depression quality"
 echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
-echo "gl_zmax 0-8192, 0 is used as wallhack when D3D render is enabled"
+echo "gl_zmax 0-8192 (default 4096), 0 is used as wallhack when D3D render is enabled"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
