--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -1,6 +1,7 @@
 echo "crippling depression performance"
 echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
+echo "gl_zmax 0-8192 (default 4096), 0 is used as wallhack when D3D render is enabled"
 
 _snd_mixahead "0.04"
 ati_npatch "0"
@@ -53,7 +54,7 @@ gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 gl_use_shaders "0"
 gl_vsync "0"
 gl_widescreen_yfov "0"
-gl_zmax "4096"
+gl_zmax "1"
 gl_ztrick_old "0"
 hpk_maxsize "0.0000000001"
 hud_centerid "1"
