--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -2,11 +2,12 @@ echo "crippling depression quality"
 echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
 echo "gl_zmax 0-8192 (default 4096), 0 is used as wallhack when D3D render is enabled"
+echo "r_shadows 0, shadows are broken in goldsrc"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
 _sethdmodels "0"
-_snd_mixahead "0.04"
+_snd_mixahead "0.045"
 ati_npatch "0"
 bgmvolume "0"
 brightness "1"
@@ -111,7 +112,7 @@ r_mirroralpha "1"
 r_mmx "1"
 r_novis "1"
 r_prefertexturefiltering "1"
-r_shadows "1"
+r_shadows "0"
 r_traceglow "1"
 r_wateralpha "0.5"
 rate "100000"
