--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -2,11 +2,12 @@ echo "crippling depression performance"
 echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
 echo "gl_zmax 0-8192 (default 4096), 0 is used as wallhack when D3D render is enabled"
+echo "r_shadows 0, shadows are broken in goldsrc"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
 _sethdmodels "0"
-_snd_mixahead "0.04"
+_snd_mixahead "0.045"
 ati_npatch "0"
 bgmvolume "0"
 brightness "2"
