--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -3,8 +3,9 @@ echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
 echo "cl_waterdist will break underwater rendering and movement underwater"
 echo "gl_zmax 0-8192 (default 4096), 0 is used as wallhack when D3D render is enabled"
+echo "r_shadows 0, shadows are broken in goldsrc"
 
-_snd_mixahead "0.04"
+_snd_mixahead "0.045"
 ati_npatch "0"
 brightness "3"
 cl_allowdownload "0"
@@ -19,6 +20,7 @@ cl_fixmodelinterpolationartifacts "0"
 cl_himodels "0"
 cl_mousegrab "1"
 cl_nosmooth "1"
+cl_shadows "0"
 cl_smoothtime "0.0"
 cl_solid_players "1"
 cl_updaterate "101"
