--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -2,6 +2,7 @@ echo "crippling depression performance"
 echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
 echo "gl_zmax 0-8192 (default 4096), 0 is used as wallhack when D3D render is enabled"
+echo "r_shadows 0, shadows are broken in goldsrc"
 
 _snd_mixahead "0.04"
 ati_npatch "0"
@@ -18,6 +19,7 @@ cl_gibcount "0"
 cl_giblife "0"
 cl_himodels "0"
 cl_nosmooth "1"
+cl_shadows "0"
 cl_smoothtime "0.000"
 cl_updaterate "101"
 cl_vsmoothing "0.000"
