--- a/Sven Co-op/autoexechq.cfg
+++ b/Sven Co-op/autoexechq.cfg
@@ -1,4 +1,5 @@
 echo "crippling depression quality"
+echo "r_shadows 0, shadows are broken in svencoop"
 
 _snd_mixahead "0.05"
 cl_allowdownload "0"
@@ -39,6 +40,7 @@ gl_fog "1"
 gl_max_size "2048"
 gl_round_down "0"
 gl_vsync "0"
+gl_zmax "32768"
 joystick "0"
 m_filter "0"
 m_rawinput "1"
@@ -48,7 +50,7 @@ r_detailtextures "1"
 r_detrailtexturessupported "1"
 r_dynamic "1"
 r_novis "1"
-r_shadows "1"
+r_shadows "0"
 r_traceglow "1"
 r_wateralpha "0.5"
 rate "100000"
