--- a/Sven Co-op/autoexecperf.cfg
+++ b/Sven Co-op/autoexecperf.cfg
@@ -1,6 +1,7 @@
 echo "crippling depression performance"
+echo "r_shadows 0, shadows are broken in goldsrc"
 
-_snd_mixahead "0.05"
+_snd_mixahead "0.045"
 cl_allowdownload "0"
 cl_allowupload "0"
 cl_cmdbackup "2"
@@ -39,11 +40,12 @@ gl_fog "0"
 gl_max_size "512"
 gl_round_down "3"
 gl_vsync "0"
+gl_zmax "1"
 joystick "0"
 m_filter "0"
 m_rawinput "1"
-mp_decals "300"
-r_decals "300"
+mp_decals "0"
+r_decals "0"
 r_detailtextures "0"
 r_detrailtexturessupported "0"
 r_dynamic "0"
@@ -52,7 +54,7 @@ r_shadows "0"
 r_traceglow "0"
 r_wateralpha "1"
 rate "100000"
-sensitivity "2.4"
+sensitivity "4"
 sv_allow_dlfile "0"
 sv_allowdownload "0"
 sv_allowupload "0"
