--- a/Sven Co-op/autoexecperf.cfg
+++ b/Sven Co-op/autoexecperf.cfg
@@ -1,5 +1,5 @@
 echo "crippling depression performance"
-echo "r_shadows 0, shadows are broken in goldsrc"
+echo "r_shadows 0, shadows are broken in svencoop"
 
 _snd_mixahead "0.045"
 cl_allowdownload "0"
