--- a/Sven Co-op/autoexechq.cfg
+++ b/Sven Co-op/autoexechq.cfg
@@ -10,6 +10,7 @@ cl_dlmax "512"
 cl_discord "0"
 cl_download_ingame "0"
 cl_filterstuffcmd "1"
+cl_gibcount "10"
 cl_himodels "1"
 cl_mirror_disabled "0"
 cl_mirror_fps "999999999999999999999999999999"
