--- a/Sven Co-op/autoexecperf.cfg
+++ b/Sven Co-op/autoexecperf.cfg
@@ -10,6 +10,7 @@ cl_dlmax "128"
 cl_discord "0"
 cl_download_ingame "0"
 cl_filterstuffcmd "1"
+cl_gibcount "0"
 cl_himodels "0"
 cl_mirror_disabled "1"
 cl_mirror_fps "1"
