--- a/Sven Co-op/autoexechq.cfg
+++ b/Sven Co-op/autoexechq.cfg
@@ -39,6 +39,8 @@ gl_ansio "16"
 gl_cull "0"
 gl_envmapsize "8192"
 gl_fog "1"
+gl_keeptjunctions "1"
+gl_lightholes "1"
 gl_max_size "2048"
 gl_round_down "0"
 gl_vsync "0"
