--- a/Sven Co-op/autoexecperf.cfg
+++ b/Sven Co-op/autoexecperf.cfg
@@ -39,8 +39,10 @@ gl_ansio "0"
 gl_cull "1"
 gl_envmapsize "128"
 gl_fog "0"
-gl_max_size "512"
-gl_round_down "3"
+gl_keeptjunctions "1"
+gl_lightholes "1"
+gl_max_size "256"
+gl_round_down "5"
 gl_vsync "0"
 gl_zmax "1"
 joystick "0"
