--- a/Sven Co-op/autoexecperf.cfg
+++ b/Sven Co-op/autoexecperf.cfg
@@ -42,6 +42,8 @@ gl_fog "0"
 gl_keeptjunctions "1"
 gl_lightholes "1"
 gl_max_size "256"
+gl_picmip "3"
+gl_playermip "3"
 gl_round_down "5"
 gl_vsync "0"
 gl_zmax "1"
