--- a/Sven Co-op/autoexechq.cfg
+++ b/Sven Co-op/autoexechq.cfg
@@ -42,6 +42,8 @@ gl_fog "1"
 gl_keeptjunctions "1"
 gl_lightholes "1"
 gl_max_size "2048"
+gl_picmip "0"
+gl_playermip "0"
 gl_round_down "0"
 gl_vsync "0"
 gl_zmax "32768"
