--- a/Sven Co-op/autoexechq.cfg
+++ b/Sven Co-op/autoexechq.cfg
@@ -45,6 +45,7 @@ gl_max_size "2048"
 gl_picmip "0"
 gl_playermip "0"
 gl_round_down "0"
+gl_spriteblend "1"
 gl_vsync "0"
 gl_zmax "32768"
 joystick "0"
