--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -55,6 +55,7 @@ gl_polyoffset "0.1"
 gl_reduce_shader_changes "0"
 gl_round_down "0"
 gl_smoothmodels "1"
+gl_spriteblend "1"
 gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
 gl_use_shaders "1"
 gl_vsync "0"
