--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -53,6 +53,7 @@ gl_playermip "3"
 gl_polyoffset "0.1"
 gl_reduce_shader_changes "1"
 gl_round_down "5"
+gl_smoothmodels "0"
 gl_spriteblend "0"
 gl_texturemode "GL_LINEAR_MIPMAP_NEAREST"
 gl_use_shaders "0"
