--- a/Sven Co-op/autoexechq.cfg
+++ b/Sven Co-op/autoexechq.cfg
@@ -48,10 +48,14 @@ gl_round_down "0"
 gl_spriteblend "1"
 gl_vsync "0"
 gl_zmax "32768"
+hud_fastswitch "1"
+hud_weaponautoswitch "1"
 joystick "0"
 m_filter "0"
 m_rawinput "1"
 mp_decals "300"
+mp_logecho "0"
+mp_logfile "0"
 r_decals "300"
 r_detailtextures "1"
 r_detrailtexturessupported "1"
@@ -74,6 +78,10 @@ sv_send_logos "0"
 sv_send_resources "0"
 sv_voiceenable "0"
 sys_ticrate "10000"
+violence_ablood "1"
+violence_agibs "1"
+violence_hblood "1"
+violence_hgibs "1"
 
 bind mwheelup "+duck"
 bind mwheeldown "+jump"
