--- a/Sven Co-op/autoexecperf.cfg
+++ b/Sven Co-op/autoexecperf.cfg
@@ -48,10 +48,14 @@ gl_round_down "5"
 gl_spriteblend "0"
 gl_vsync "0"
 gl_zmax "1"
+hud_fastswitch "1"
+hud_weaponautoswitch "1"
 joystick "0"
 m_filter "0"
 m_rawinput "1"
 mp_decals "0"
+mp_logecho "0"
+mp_logfile "0"
 r_decals "0"
 r_detailtextures "0"
 r_detrailtexturessupported "0"
@@ -74,7 +78,10 @@ sv_send_logos "0"
 sv_send_resources "0"
 sv_voiceenable "0"
 sys_ticrate "10000"
-
+violence_ablood "0"
+violence_agibs "0"
+violence_hblood "0"
+violence_hgibs "0"
 bind mwheelup "+duck"
 bind mwheeldown "+jump"
 bind mouse4 "+voicerecord"
