--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -96,6 +96,7 @@ max_shells "120"
 max_smokepuffs "120"
 motdfile "motd.txt"
 mp_decals "4096"
+mp_logecho "0"
 mp_logfile "0"
 MP3FadeTime "0.0"
 MP3Volume "0"
