--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -96,6 +96,7 @@ max_shells "0"
 max_smokepuffs "0"
 motdfile "motd.txt"
 mp_decals "0"
+mp_logecho "0"
 mp_logfile "0"
 MP3FadeTime "0.0"
 MP3Volume "0"
