--- a/Sven Co-op/autoexecperf.cfg
+++ b/Sven Co-op/autoexecperf.cfg
@@ -1,5 +1,6 @@
 echo "crippling depression performance"
 echo "r_shadows 0, shadows are broken in svencoop"
+echo "gl_zmax 0-32768+ (default 4096), 0 is used as wallhack when D3D render is enabled"
 
 _snd_mixahead "0.045"
 cl_allowdownload "0"
