--- a/Left 4 Dead 2/autoexec.cfg
+++ b/Left 4 Dead 2/autoexec.cfg
@@ -1,10 +1,11 @@
 echo "crippling depression"
+echo "cl_interp 0.033 for 30tic servers"
 echo "cl_interp 0.03 for 33tic servers"
 
 cl_allowdownload "0"
 cl_allowupload "0"
 cl_autohelp "0"
-cl_cmdrate "33"
+cl_cmdrate "30"
 cl_crosshair_alpha "999"
 cl_crosshair_dynamic "0"
 cl_crosshair_blue "50"
@@ -13,12 +14,12 @@ cl_crosshair_red "50"
 cl_crosshair_thickness "0"
 cl_downloadfilter "all"
 cl_forcepreload "1"
-cl_interp "0.03"
+cl_interp "0.033"
 cl_interp_ratio "1"
 cl_playerspraydisable "1"
 cl_showhelp "0"
 cl_showpluginmessages "0"
-cl_updaterate "33"
+cl_updaterate "30"
 con_enable "1"
 fps_max "0"
 gl_swap_limit "0"
