--- a/Left 4 Dead 2/autoexec.cfg
+++ b/Left 4 Dead 2/autoexec.cfg
@@ -1,6 +1,7 @@
 echo "crippling depression"
+echo "l4d2 will drop to 10tic during hordes sequence"
+echo "cl_interp 0.05 for 10tic servers"
 echo "cl_interp 0.033 for 30tic servers"
-echo "cl_interp 0.03 for 33tic servers"
 
 cl_allowdownload "0"
 cl_allowupload "0"
