--- a/Left 4 Dead 2/autoexec.cfg
+++ b/Left 4 Dead 2/autoexec.cfg
@@ -1,6 +1,6 @@
 echo "crippling depression"
-echo "l4d2 will drop to 10tic during hordes sequence"
-echo "cl_interp 0.05 for 10tic servers"
+echo "l4d2 will drop to 10tic during hordes sequence, leave cl_interp 0.1"
+echo "cl_interp 0.1 for 10tic servers"
 echo "cl_interp 0.033 for 30tic servers"
 
 cl_allowdownload "0"
@@ -15,7 +15,7 @@ cl_crosshair_red "50"
 cl_crosshair_thickness "0"
 cl_downloadfilter "all"
 cl_forcepreload "1"
-cl_interp "0.033"
+cl_interp "0.1"
 cl_interp_ratio "1"
 cl_playerspraydisable "1"
 cl_showhelp "0"
