--- a/Left 4 Dead 2/autoexec.cfg
+++ b/Left 4 Dead 2/autoexec.cfg
@@ -1,5 +1,5 @@
 echo "crippling depression"
-echo "l4d2 will drop to 10tic during hordes sequence, leave cl_interp 0.1"
+echo "l4d2 will drop to 10tic during hordes sequence, use cl_interp 0.1 always"
 echo "cl_interp 0.1 for 10tic servers"
 echo "cl_interp 0.033 for 30tic servers"
 
