--- a/Counter-Strike: Source/autoexechq.cfg
+++ b/Counter-Strike: Source/autoexechq.cfg
@@ -6,6 +6,7 @@ echo "r_waterdraw cvars cause black water and water glitches when disabled"
 echo "r_maxmodeldecal 0 will crash game after joining a server"
 echo "cs1.6 servers show up in css server list"
 echo "dont use violence_* 0 for gibs or blood, breaks ragdolls and disappearing corpses"
+echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -53,7 +54,7 @@ filesystem_max_stdio_read "64"
 flex_rules "1"
 flex_smooth "1"
 fog_enable "1"
-fps_max "0"
+fps_max "999"
 fx_drawimpactdebris "1"
 fx_drawimpactdust "1"
 fx_drawmetalspark "1"
