--- a/Counter-Strike: Source/autoexecperf.cfg
+++ b/Counter-Strike: Source/autoexecperf.cfg
@@ -6,6 +6,7 @@ echo "r_waterdraw cvars cause black water and water glitches when disabled"
 echo "r_maxmodeldecal 0 will crash game after joining a server"
 echo "cs1.6 servers show up in css server list"
 echo "dont use violence_* 0 for gibs or blood, breaks ragdolls and disappearing corpses"
+echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
 
 
 
@@ -55,7 +56,7 @@ fast_fogvolume "1"
 filesystem_buffer_size "1"
 filesystem_max_stdio_read "64"
 fog_enable "0"
-fps_max "0"
+fps_max "999"
 fx_drawimpactdebris "0"
 fx_drawimpactdust "0"
 fx_drawmetalspark "0"
