--- a/Half-Life 2/autoexechq.cfg
+++ b/Half-Life 2/autoexechq.cfg
@@ -3,6 +3,7 @@ echo "mat_max_worldmesh_vertices more than 9 nines causes (too many vertex forma
 echo "cl_detaildist and cl_detailfade return to default values on map load"
 echo "r_maxmodeldecal large values crash game"
 echo "r_queued_decals 1 causes crashing"
+echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
 
 
 
@@ -51,7 +52,7 @@ fast_fogvolume "1"
 filesystem_buffer_size "1"
 filesystem_max_stdio_read "64"
 fov_desired "90"
-fps_max "0"
+fps_max "999"
 fx_drawimpactdebris "1"
 fx_drawimpactdust "1"
 fx_drawmetalspark "1"
