--- a/Left 4 Dead 2/autoexec.cfg
+++ b/Left 4 Dead 2/autoexec.cfg
@@ -2,6 +2,7 @@ echo "crippling depression"
 echo "l4d2 will drop to 10tic during hordes sequence, use cl_interp 0.1 always"
 echo "cl_interp 0.1 for 10tic servers"
 echo "cl_interp 0.033 for 30tic servers"
+echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
 
 cl_allowdownload "0"
 cl_allowupload "0"
@@ -22,7 +23,7 @@ cl_showhelp "0"
 cl_showpluginmessages "0"
 cl_updaterate "31"
 con_enable "1"
-fps_max "0"
+fps_max "999"
 gl_swap_limit "0"
 joystick "0"
 m_customaccel "0"
