--- a/Team Fortress 2/autoexechq.cfg
+++ b/Team Fortress 2/autoexechq.cfg
@@ -1,6 +1,7 @@
 echo "crippling depression quality"
 echo "r_queued_decals 1 causes crashing"
 echo "r_queued_post_processing causes graphic glitches when enabled"
+echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -51,7 +52,7 @@ fast_fogvolume "1"
 filesystem_buffer_size "1"
 filesystem_max_stdio_read "64"
 fov_desired "105"
-fps_max "0"
+fps_max "999"
 fx_drawimpactdebris "1"
 fx_drawimpactdust "1"
 fx_drawmetalspark "1"
