--- a/Team Fortress 2/autoexecpro.cfg
+++ b/Team Fortress 2/autoexecpro.cfg
@@ -1,5 +1,6 @@
 echo "crippling depression performance"
 echo "r_waterdraw cvars prevent seeing in water if 0"
+echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
 
 blink_duration "0"
 cl_allowdownload "0"
@@ -50,7 +51,7 @@ filesystem_max_stdio_read "64"
 flex_rules "0"
 flex_smooth "0"
 fov_desired "105"
-fps_max "0"
+fps_max "999"
 fx_drawimpactdebris "0"
 fx_drawimpactdust "0"
 fx_drawmetalspark "0"
