--- a/Counter-Strike: Source/autoexecpro.cfg
+++ b/Counter-Strike: Source/autoexecpro.cfg
@@ -6,7 +6,7 @@ echo "r_waterdraw cvars cause black water and water glitches when disabled"
 echo "r_maxmodeldecal 0 will crash game after joining a server"
 echo "cs1.6 servers show up in css server list"
 echo "dont use violence_* 0 for gibs or blood, breaks ragdolls and disappearing corpses"
-echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
+echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 
 echo "water and shadows enabled for pro config"
 
