--- a/Half-Life 2/autoexechq.cfg
+++ b/Half-Life 2/autoexechq.cfg
@@ -3,7 +3,7 @@ echo "mat_max_worldmesh_vertices more than 9 nines causes (too many vertex forma
 echo "cl_detaildist and cl_detailfade return to default values on map load"
 echo "r_maxmodeldecal large values crash game"
 echo "r_queued_decals 1 causes crashing"
-echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
+echo "never use fps_max 0, increases latency"
 
 
 
