--- a/Left 4 Dead 2/autoexec.cfg
+++ b/Left 4 Dead 2/autoexec.cfg
@@ -2,7 +2,7 @@ echo "crippling depression"
 echo "l4d2 will drop to 10tic during hordes sequence, use cl_interp 0.1 always"
 echo "cl_interp 0.1 for 10tic servers"
 echo "cl_interp 0.033 for 30tic servers"
-echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
+echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 
 cl_allowdownload "0"
 cl_allowupload "0"
