--- a/Team Fortress 2/autoexechq.cfg
+++ b/Team Fortress 2/autoexechq.cfg
@@ -1,7 +1,7 @@
 echo "crippling depression quality"
 echo "r_queued_decals 1 causes crashing"
 echo "r_queued_post_processing causes graphic glitches when enabled"
-echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
+echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 
 blink_duration "0.2"
 cl_allowdownload "0"
