--- a/Team Fortress 2/autoexecperf.cfg
+++ b/Team Fortress 2/autoexecperf.cfg
@@ -1,6 +1,6 @@
 echo "crippling depression performance"
 echo "r_waterdraw cvars prevent seeing in water if 0"
-echo "never use fps_max 0, increases latency and bugs some servers to force fps_max 59"
+echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 
 blink_duration "0"
 cl_allowdownload "0"
