--- a/Left 4 Dead 2/autoexec.cfg
+++ b/Left 4 Dead 2/autoexec.cfg
@@ -1,7 +1,8 @@
 echo "crippling depression"
-echo "l4d2 will drop to 10tic during hordes sequence, use cl_interp 0.1 always"
+echo "l4d2 will drop to 10tic during hordes sequence, use cl_interp 0.1 always preferably"
 echo "cl_interp 0.1 for 10tic servers"
 echo "cl_interp 0.033 for 30tic servers"
+echo "cl_interp 0.03 for 33tic servers"
 echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 
 cl_allowdownload "0"
@@ -50,3 +51,7 @@ sv_unlockedchapters "99"
 bind mwheelup "+jump"
 bind mwheeldown "+jump"
 bind mouse4 "+voicerecord"
+
+bind kp_ins "cl_updaterate 11; cl_interp 0.1"
+bind kp_end "cl_updaterate 31; cl_interp 0.033"
+bind kp_2 "cl_updaterate 31; cl_interp 0.033"
