--- a/Left 4 Dead 2/autoexec.cfg
+++ b/Left 4 Dead 2/autoexec.cfg
@@ -7,6 +7,8 @@ echo "never use fps_max 0, increases latency, bugs some servers to force fps_max
 
 cl_allowdownload "0"
 cl_allowupload "0"
+cl_autoaim "0"
+cl_autoaim2 "0"
 cl_autohelp "0"
 cl_cmdrate "31"
 cl_crosshair_alpha "999"
@@ -15,16 +17,23 @@ cl_crosshair_blue "50"
 cl_crosshair_green "250"
 cl_crosshair_red "50"
 cl_crosshair_thickness "0"
+cl_debugrumble "0"
 cl_downloadfilter "all"
 cl_forcepreload "1"
 cl_interp "0.1"
 cl_interp_ratio "1"
+cl_perf_wizard_enable "0"
 cl_playerspraydisable "1"
+cl_ragdoll_limit "-1"
 cl_showhelp "0"
 cl_showpluginmessages "0"
 cl_updaterate "31"
+clientport "65007"
 con_enable "1"
+dsp_enhance_stereo "1"
+dsp_slow_cpu "0"
 fps_max "999"
+gameinstructor_enable "0"
 gl_swap_limit "0"
 joystick "0"
 m_customaccel "0"
@@ -35,11 +44,16 @@ m_mouseaccel2 "0"
 m_mousespeed "0"
 m_rawinput "1"
 mat_queue_mode "2"
+motd_enabled "0"
+motd_intros "0"
 name "TyranT🜨"
+net_allow_multicast "0"
 net_maxroutable "1260"
+net_steamcnx_allowrelay "0"
+net_steamcnx_enabled "0"
 rate "1048576"
 sensitivity "4"
-snd_mixahead "0.04"
+snd_mixahead "0.045"
 sv_forcepreload "1"
 sv_lan "1"
 sv_maxcmdrate "128"
