--- a/Left 4 Dead 2/autoexechq.cfg
+++ b/Left 4 Dead 2/autoexechq.cfg
@@ -5,6 +5,8 @@ echo "cl_interp 0.033 for 30tic servers"
 echo "cl_interp 0.03 for 33tic servers"
 echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 
+echo "unlimited ragdolls and enhanced sound enabled"
+
 cl_allowdownload "0"
 cl_allowupload "0"
 cl_autoaim "0"
