--- a/Counter-Strike: Source/autoexecfun.cfg
+++ b/Counter-Strike: Source/autoexecfun.cfg
@@ -7,7 +7,7 @@ echo "r_maxmodeldecal 0 will crash game after joining a server"
 echo "cs1.6 servers show up in css server list"
 echo "dont use violence_* 0 for gibs or blood, breaks ragdolls and disappearing corpses"
 echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
-echo "use cl_minmodels 1 for buggy player models that still show up as ERROR models"
+echo "use cl_minmodels 1 for buggy player models that still render as ERROR models"
 
 echo "ragdolls and water are enabled for fun config"
 
