--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -3,6 +3,8 @@ echo "r_dynamic and r_lightmap are locked"
 echo "gl_max_size 256 is lowest value"
 echo "gl_zmax 0-8192 (default 4096), 0 is used as wallhack when D3D render is enabled"
 echo "r_shadows 0, shadows are broken in goldsrc"
+echo "-condebug launch parameter or condebug in console to enable full console log, saves in Half-Life\qconsole.log"
+
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
