--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -5,6 +5,7 @@ echo "gl_zmax 0-8192 (default 4096), 0 is used as wallhack when D3D render is en
 echo "r_shadows 0, shadows are broken in goldsrc"
 echo "-condebug launch parameter or condebug in console to enable full console log, saves in Half-Life\qconsole.log"
 echo "if immediate crash after server join, try cl_allowdownload 1"
+echo "cl_crosshair_size small when using HD resolutions"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
