--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -6,6 +6,7 @@ echo "r_shadows 0, shadows are broken in goldsrc"
 echo "-condebug launch parameter or condebug in console to enable full console log, saves in Half-Life\qconsole.log"
 echo "if immediate crash after server join, try cl_allowdownload 1"
 echo "cl_crosshair_size small when using HD resolutions"
+echo "joining beta installs old 2020 build, not newer 2023 builds"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
