--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -6,6 +6,7 @@ echo "gl_zmax 0-8192 (default 4096), 0 is used as wallhack when D3D render is en
 echo "r_shadows 0, shadows are broken in goldsrc"
 echo "-condebug launch parameter or condebug in console to enable full console log, saves in Half-Life\qconsole.log"
 echo "if immediate crash after server join, try cl_allowdownload 1"
+echo "joining beta installs old 2020 build, not newer 2023 builds"
 
 _snd_mixahead "0.045"
 ati_npatch "0"
