--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -7,6 +7,7 @@ echo "-condebug launch parameter or condebug in console to enable full console l
 echo "if immediate crash after server join, try cl_allowdownload 1"
 echo "cl_crosshair_size small when using HD resolutions"
 echo "joining beta installs old 2020 build, not newer 2023 builds"
+echo "make sure config.cfg, autoexec.cfg, and userconfig.cfg are READ-ONLY to prevent admin slowhacking"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
