--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -7,6 +7,7 @@ echo "r_shadows 0, shadows are broken in goldsrc"
 echo "-condebug launch parameter or condebug in console to enable full console log, saves in Half-Life\qconsole.log"
 echo "if immediate crash after server join, try cl_allowdownload 1"
 echo "joining beta installs old 2020 build, not newer 2023 builds"
+echo "make sure config.cfg, autoexec.cfg, and userconfig.cfg are READ-ONLY to prevent admin slowhacking"
 
 _snd_mixahead "0.045"
 ati_npatch "0"
