--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -86,6 +86,7 @@ hpk_maxsize "256"
 hud_centerid "1"
 hud_drawhistory_time "5"
 hud_fastswitch "1"
+hud_saytext_internal "1"
 hud_saytext_time "5"
 joystick "0"
 joysupported "0"
