--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -86,6 +86,7 @@ hpk_maxsize "0.000000001"
 hud_centerid "1"
 hud_drawhistory_time "0"
 hud_fastswitch "1"
+hud_saytext_internal "0"
 hud_saytext_time "0"
 joystick "0"
 joysupported "0"
