--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -69,6 +69,8 @@ hisound "1"
 hpk_maxsize "256"
 hud_centerid "1"
 hud_fastswitch "1"
+hud_saytext_internal "1"
+hud_saytext_time "5"
 joystick "0"
 joysupported "0"
 m_customaccel "0"
