--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -69,6 +69,8 @@ hisound "1"
 hpk_maxsize "0.000000001"
 hud_centerid "1"
 hud_fastswitch "1"
+hud_saytext_internal "0"
+hud_saytext_time "0"
 joystick "0"
 joysupported "0"
 m_customaccel "0"
