--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -67,6 +67,8 @@ gl_ztrick_old "0"
 hpk_maxsize "0.0000000001"
 hud_centerid "1"
 hud_fastswitch "1"
+hud_saytext_internal "0"
+hud_saytext_time "0"
 joystick "0"
 joysupported "0"
 m_filter "0"
