--- a/Counter-Strike 1.6/userconfighq.cfg
+++ b/Counter-Strike 1.6/userconfighq.cfg
@@ -84,6 +84,7 @@ gunsmoke "1"
 hisound "1"
 hpk_maxsize "256"
 hud_centerid "1"
+hud_deathnotice_time "6"
 hud_drawhistory_time "5"
 hud_fastswitch "1"
 hud_saytext_internal "1"
