--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -84,6 +84,7 @@ gunsmoke "0"
 hisound "1"
 hpk_maxsize "0.000000001"
 hud_centerid "1"
+hud_deathnotice_time "0"
 hud_drawhistory_time "0"
 hud_fastswitch "1"
 hud_saytext_internal "0"
