--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -68,6 +68,7 @@ gl_ztrick_old "0"
 hisound "1"
 hpk_maxsize "256"
 hud_centerid "1"
+hud_deathnotice_time "6"
 hud_fastswitch "1"
 hud_saytext_internal "1"
 hud_saytext_time "5"
