--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -68,6 +68,7 @@ gl_zmax "8192"
 gl_ztrick_old "0"
 hpk_maxsize "0.0000000001"
 hud_centerid "1"
+hud_deathnotice_time "6"
 hud_fastswitch "1"
 hud_saytext_internal "1"
 hud_saytext_time "5"
