--- a/Team Fortress Classic/userconfigperf.cfg
+++ b/Team Fortress Classic/userconfigperf.cfg
@@ -66,6 +66,7 @@ gl_zmax "1"
 gl_ztrick_old "0"
 hpk_maxsize "0.0000000001"
 hud_centerid "1"
+hud_deathnotice_time "0"
 hud_fastswitch "1"
 hud_saytext_internal "0"
 hud_saytext_time "0"
