--- a/Half-Life/userconfighq.cfg
+++ b/Half-Life/userconfighq.cfg
@@ -69,6 +69,7 @@ hisound "1"
 hpk_maxsize "256"
 hud_centerid "1"
 hud_deathnotice_time "6"
+hud_drawhistory_time "5"
 hud_fastswitch "1"
 hud_saytext_internal "1"
 hud_saytext_time "5"
