--- a/Half-Life/userconfigperf.cfg
+++ b/Half-Life/userconfigperf.cfg
@@ -69,6 +69,7 @@ hisound "1"
 hpk_maxsize "0.000000001"
 hud_centerid "1"
 hud_deathnotice_time "0"
+hud_drawhistory_time "0"
 hud_fastswitch "1"
 hud_saytext_internal "0"
 hud_saytext_time "0"
