--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -69,6 +69,7 @@ gl_ztrick_old "0"
 hpk_maxsize "0.0000000001"
 hud_centerid "1"
 hud_deathnotice_time "6"
+hud_drawhistory_time "5"
 hud_fastswitch "1"
 hud_saytext_internal "1"
 hud_saytext_time "5"
