--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -8,7 +8,7 @@ echo "if immediate crash after server join, try cl_allowdownload 1"
 echo "cl_crosshair_size small when using HD resolutions"
 echo "joining beta installs old 2020 build, not newer 2023 builds"
 echo "make sure config.cfg, autoexec.cfg, and userconfig.cfg are READ-ONLY to prevent admin slowhacking"
-echo "make sure tempdecal.wad is READ-ONLY and blank, unless using a custom spray"
+echo "make sure tempdecal.wad is READ-ONLY and blank 0KB, unless using a custom spray"
 
 _cl_autowepswitch "0"
 _setaddons_folder "0"
