--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -7,6 +7,8 @@ echo "-condebug launch parameter or condebug in console to enable full console l
 echo "if immediate crash after server join, try cl_allowdownload 1"
 echo "joining beta installs old 2020 build, not newer 2023 builds"
 echo "make sure config.cfg, autoexec.cfg, and userconfig.cfg are READ-ONLY to prevent admin slowhacking"
+echo "make sure tempdecal.wad is READ-ONLY and blank 0KB, unless using a custom spray"
+
 
 _snd_mixahead "0.045"
 ati_npatch "0"
