--- a/Counter-Strike 1.6/userconfigperf.cfg
+++ b/Counter-Strike 1.6/userconfigperf.cfg
@@ -168,3 +168,4 @@ bind [ "awp;deagle;primammo;secammo"
 bind - "m4a1;ak47;deagle;primammo;secammo"
 bind = "vesthelm;hegren;flash;flash;sgren;defuser"
 unbind f
+bind kp_ins "piss"
