--- a/Team Fortress Classic/userconfighq.cfg
+++ b/Team Fortress Classic/userconfighq.cfg
@@ -68,7 +68,7 @@ gl_vsync "0"
 gl_widescreen_yfov "1"
 gl_zmax "8192"
 gl_ztrick_old "0"
-hpk_maxsize "0.0000000001"
+hpk_maxsize "4"
 hud_centerid "1"
 hud_deathnotice_time "6"
 hud_drawhistory_time "5"
