--- a/Counter-Strike 1.6/userconfigHQ.cfg
+++ b/Counter-Strike 1.6/userconfigHQ.cfg
@@ -170,3 +170,5 @@ bind - "m4a1;ak47;deagle;primammo;secammo"
 bind = "vesthelm;hegren;flash;flash;sgren;defuser"
 bind f "impulse 100"
 bind kp_ins "piss"
+unbind mouse2
+bind kp_end "+attack2"
