--- a/Counter-Strike 1.6/userconfigPERF.cfg
+++ b/Counter-Strike 1.6/userconfigPERF.cfg
@@ -169,3 +169,5 @@ bind - "m4a1;ak47;deagle;primammo;secammo"
 bind = "vesthelm;hegren;flash;flash;sgren;defuser"
 unbind f
 bind kp_ins "piss"
+unbind mouse2
+bind kp_end "+attack2"
