--- a/Counter-Strike 1.6/userconfigPERF.cfg
+++ b/Counter-Strike 1.6/userconfigPERF.cfg
@@ -168,6 +168,6 @@ bind [ "awp;deagle;primammo;secammo"
 bind - "m4a1;ak47;deagle;primammo;secammo"
 bind = "vesthelm;hegren;flash;flash;sgren;defuser"
 unbind f
-bind kp_ins "piss"
+bind pgdn "piss"
 unbind mouse2
-bind kp_end "+attack2"
+bind pgup "+attack2"
