--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -8,6 +8,7 @@ echo "cs1.6 servers show up in css server list"
 echo "dont use violence_* 0 for gibs or blood, breaks ragdolls and disappearing corpses"
 echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 echo "use cl_minmodels 1 for buggy player models that still render as ERROR models"
+echo "make sure config.cfgand autoexec.cfg are READ-ONLY to prevent admin slowhacking"
 
 echo "ragdolls and water are enabled for fun config"
 
