--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -4,6 +4,7 @@ echo "cl_detaildist and cl_detailfade return to default values on map load"
 echo "r_maxmodeldecal large values crash game"
 echo "r_queued_decals 1 causes crashing"
 echo "never use fps_max 0, increases latency"
+echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
 
 
 
