--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -2,6 +2,7 @@ echo "crippling depression quality"
 echo "r_queued_decals 1 causes crashing"
 echo "r_queued_post_processing causes graphic glitches when enabled"
 echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
+echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
 
 blink_duration "0.2"
 cl_allowdownload "0"
