--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -39,6 +39,7 @@ cl_ragdoll_physics_enable "1"
 cl_showhelp "0"
 cl_showpluginmessages "0"
 cl_show_splashes "0"
+cl_smooth "0"
 cl_smoothtime "0"
 cl_software_cursor "0"
 cl_threaded_client_leaf_system "1"
