--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -9,6 +9,7 @@ echo "dont use violence_* 0 for gibs or blood, breaks ragdolls and disappearing 
 echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 echo "use cl_minmodels 1 for buggy player models that still render as ERROR models"
 echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
+echo "use GCFScape to open and view VPK files"
 
 blink_duration "0.2"
 cl_allowdownload "0"
