--- a/Left 4 Dead 2/autoexecHQ.cfg
+++ b/Left 4 Dead 2/autoexecHQ.cfg
@@ -5,6 +5,7 @@ echo "cl_interp 0.033 for 30tic servers"
 echo "cl_interp 0.03 for 33tic servers"
 echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
+echo "use GCFScape to open and view VPK files"
 
 echo "unlimited ragdolls and enhanced sound enabled"
 
