--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -10,6 +10,8 @@ echo "never use fps_max 0, increases latency, bugs some servers to force fps_max
 echo "use cl_minmodels 1 for buggy player models that still render as ERROR models"
 echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
 echo "use GCFScape to open and view VPK files"
+echo "if flashing colors and other graphical bugs occur when joining a game, reconnect to server"
+
 
 echo "ragdolls and water are enabled for fun config"
 
