--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -6,8 +6,7 @@ echo "r_queued_decals 1 causes crashing"
 echo "never use fps_max 0, increases latency"
 echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
 echo "use GCFScape to open and view VPK files"
-
-
+echo "r_queued_post_processing causes flashing colors and other graphical bugs when joining a game, reconnecting fixes flashing colors but still produces post processing glitches like strobing and dimming of post processing lights and disappearing gun"
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -155,7 +154,7 @@ r_PhysPropStaticLighting "1"
 r_pixelfog "1"
 r_propsmaxdist "999999999999999999999999999"
 r_queued_decals "0"
-r_queued_post_processing "1"
+r_queued_post_processing "0"
 r_queued_ropes "1"
 r_renderoverlayfragment "1"
 r_shadowmaxrendered "128"
