--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -3,6 +3,8 @@ echo "r_waterdraw cvars prevent seeing in water if 0"
 echo "never use fps_max 0, increases latency, bugs some servers to force fps_max 59, causes extreme lag spikes on certain servers"
 echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
 echo "use GCFScape to open and view VPK files"
+echo "r_queued_decals 1 causes crashing"
+echo "r_queued_post_processing causes flashing colors and other graphical bugs when joining a game, reconnecting fixes flashing colors but still produces post processing glitches like strobing and dimming of post processing lights and disappearing gun"
 
 blink_duration "0"
 cl_allowdownload "0"
@@ -159,7 +161,7 @@ r_PhysPropStaticLighting "0"
 r_pixelfog "1"
 r_propsmaxdist "1"
 r_queued_decals "0"
-r_queued_post_processing "1"
+r_queued_post_processing "0"
 r_queued_ropes "1"
 r_renderoverlayfragment "0"
 r_rootlod "2"
