--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -117,6 +117,7 @@ mat_software_aa_strength_vgui "0"
 mat_software_aa_tap_offset "0"
 mat_specular "0"
 mat_texture_reload_frame_swap_workaround "0"
+mat_tonemapping_occlusion_use_stencil "0"
 mat_trilinear "0"
 mat_vsync "0"
 mat_wateroverlaysize "0"
