--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -111,6 +111,7 @@ mat_software_aa_strength "0"
 mat_software_aa_strength_vgui "0"
 mat_specular "0"
 mat_texture_reload_frame_swap_workaround "0"
+mat_tonemapping_occlusion_use_stencil "0"
 mat_trilinear "0"
 mat_use_compressed_hdr_textures "1"
 mat_vsync "0"
