--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -163,6 +163,7 @@ r_maxmodeldecal "1"
 r_maxnewsamples "0"
 r_maxsampledist "0"
 r_minsampledist "0"
+r_norefresh "1"
 r_occlusion "1"
 r_PhysPropStaticLighting "0"
 r_pixelfog "1"
