--- a/Counter-Strike: Source/autoexecFUN.cfg
+++ b/Counter-Strike: Source/autoexecFUN.cfg
@@ -58,6 +58,7 @@ con_enable "1"
 decalfrequency "1"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "1"
+engine_no_focus_sleep "0"
 flex_rules "0"
 flex_smooth "0"
 fast_fogvolume "1"
