--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -49,6 +49,7 @@ cl_updaterate "67"
 con_enable "1"
 dsp_enhance_stereo "1"
 dsp_slow_cpu "0"
+engine_no_focus_sleep "0"
 flex_rules "1"
 flex_smooth "1"
 fast_fogvolume "1"
