--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -155,6 +155,7 @@ r_flashlightmodels "0"
 r_flashlightculldepth "0"
 r_flashlightscissor "0"
 r_flex "0"
+r_frustumcullworld "1"
 r_lightcache_zbuffercache "1"
 r_lod "2"
 r_maxdlights "32"
