--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -136,6 +136,7 @@ r_eyemove "1"
 r_eyes "1"
 r_fastzreject "0"
 r_ForceWaterLeaf "1"
+r_frustumcullworld "0"
 r_glint_procedural "0"
 r_hunkalloclightmaps "0"
 r_lightcache_zbuffercache "1"
