--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -151,6 +151,7 @@ r_flashlightmodels "1"
 r_flashlightculldepth "1"
 r_flashlightscissor "1"
 r_flex "1"
+r_frustumcullworld "0"
 r_lod "0"
 r_maxdlights "128"
 r_maxmodeldecal "8192"
