--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -88,6 +88,7 @@ mat_alphacoverage "0"
 mat_antialias "0"
 mat_bufferprimitives "1"
 mat_bumpmap "0"
+mat_clipz "1"
 mat_colorcorrection "0"
 mat_colcorrection_disableentities "1"
 mat_disable_bloom "1"
