--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -84,6 +84,7 @@ mat_alphacoverage "1"
 mat_antialias "8"
 mat_bufferprimitives "1"
 mat_bumpmap "1"
+mat_clipz "0"
 mat_compressedtextures "1"
 mat_colorcorrection "1"
 mat_colcorrection_disableentities "0"
