--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -37,7 +37,7 @@ cl_new_impact_effects "0"
 cl_phys_props_enable "1"
 cl_phys_props_max "99999999999999999999999999"
 cl_phys_props_respawndist "999999999999999999999999999"
-cl_phys_props_respawnrate "60"
+cl_phys_props_respawnrate "999999999999999999999999999"
 cl_playerspraydisable "1"
 cl_ragdoll_collide "1"
 cl_ragdoll_physics_enable "1"
