--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -154,6 +154,7 @@ r_flashlightculldepth "1"
 r_flashlightscissor "1"
 r_flex "1"
 r_frustumcullworld "0"
+r_lightcache_zbuffercache "1"
 r_lod "0"
 r_maxdlights "128"
 r_maxmodeldecal "50"
