--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -120,6 +120,7 @@ mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_touchalldata "1"
 mod_offline_hdr_switch "1"
+mp_decals "4096"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
 net_maxroutable "1260"
@@ -128,7 +129,7 @@ mp_decals "999999999999999999999999999"
 name "TyranT🜨"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
-r_decals "999999999999999999999999999"
+r_decals "4096"
 r_decalstaticprops "1"
 r_drawdetailprops "1"
 r_drawflecks "1"
@@ -193,6 +194,7 @@ snd_defer_trace "0"
 snd_disable_mixer_duck "0"
 snd_noextraupdate "1"
 snd_async_spew_blocking "0"
+sp_decals "4096"
 sv_allowdownload "0"
 sv_allowupload "0"
 sv_forcepreload "1"
