--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -125,7 +125,7 @@ mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_touchalldata "1"
 mod_offline_hdr_switch "1"
-mp_decals "300"
+mp_decals "4096"
 name "TyranT🜨"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
@@ -133,7 +133,7 @@ net_maxroutable "1260"
 net_maxpacketdrop "0"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
-r_decals "300"
+r_decals "4096"
 r_decalstaticprops "1"
 r_drawdetailprops "1"
 r_drawflecks "1"
@@ -199,6 +199,7 @@ snd_defer_trace "0"
 snd_disable_mixer_duck "0"
 snd_noextraupdate "1"
 snd_async_spew_blocking "0"
+sp_decals "4096"
 sv_allowdownload "0"
 sv_allowupload "0"
 sv_forcepreload "1"
