--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -200,6 +200,7 @@ snd_pitchquality "0"
 snd_defer_trace "1"
 snd_disable_mixer_duck "1"
 snd_noextraupdate "1"
+sp_decals "0"
 sv_allowdownload "0"
 sv_allowupload "0"
 sv_forcepreload "1"
