--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -13,7 +13,7 @@ echo "use GCFScape to open and view VPK files"
 echo "r_queued_post_processing causes flashing colors and other graphical bugs when joining a game, reconnecting fixes flashing colors but still produces post processing glitches like strobing and dimming of post processing lights and disappearing gun"
 echo "cl_phys_props_max at a value too large will cause disappearing props when shot"
 echo "(con_logfile foo.log) to save console output as file in Counter-Strike Source/cstrike directory"
-echo "invisible gun world models when Free-Roam Spectating occur even with default config"
+echo "invisible gun world models occur even with default config, happens because of missing custom server weapon models + replacement error model"
 
 
 
