--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -166,6 +166,7 @@ r_propsmaxdist "999999999999999999999999999"
 r_queued_decals "0"
 r_queued_post_processing "0"
 r_queued_ropes "1"
+r_radiosity "3"
 r_renderoverlayfragment "1"
 r_shadowmaxrendered "128"
 r_shadowrendertotexture "1"
